--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -56,7 +56,7 @@ header img {
 
 header {
    width: 100%;
-   height: 75px;
+   height: 80px;
    background-color: black;
    border-bottom: 1px solid Seashell;
    position: fixed;
@@ -79,20 +79,23 @@ header {
 
 .text-block {
      display: flex;
+     justify-content: space-around;
      background-color: #000000;
      color: Seashell;
 
 
 }
 
-h2  {
+h2.text-block  {
     display: block;
     font-weight: bold;
+    background-color: black;
 }
 
 h4 {
    display: block;
    font-weight: bold;
+   background-color: black;
 
 }
 /*
@@ -123,6 +126,6 @@ h4 span {
       display: block;
       padding: 5px 5px;
       font-weight: bold;
-      text-align: center;
+      justify-content: space-around;
 
 }
