--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -67,7 +67,7 @@ header {
 
 /* First Section of Content ourmission */
 
-#ourmission .content{
+#ourmission {
         height: 700px;
         /*background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg");*/
         padding-top: 10px;
@@ -77,32 +77,20 @@ header {
 
 }
 
-/* .conteiner {
-     width: 400px;
-     border: solid 1px black;
-     display: flex;
-     justify-content: space-around;
-     color: Seashell;
+ .conteiner {
+     display: inline;
+     position: relative;
+     }
+  input {
+    width: 500px
+  }
+  h2 h4 {
+    background: black;
+    position: absolute;
+
+  }
 
 
-} */
-
-.content h2 {
-    flex-direction: row;
-    width: 20%;
-    border: 1px solid white; /*change to black after knowing if works */
-    font-weight: bold;
-    margin-right: auto;
-}
-
-.content h4 {
-   flex-direction: row;
-   width: 20%;
-   border: 1px solid white;
-   height: 200px;
-   margin-left: auto;
-
-}
 /*
 h2 span {
     display: inline-block;
