--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,7 +14,7 @@ h2,
 h3,
 h4 {
   margin: 0px;
-  padding: 5px;
+  padding: 10px;
 }
 
 /* Header */
@@ -132,7 +132,6 @@ header {
        align-content: space-around;
        width: 1000px;
        padding-bottom: 50px;
-       padding-bottom: 200px;
 
 }
 
@@ -167,9 +166,9 @@ header {
 .locations {
 
         background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg");
-        height: 500px;
-        padding-bottom: 200px;
-        padding-top: 90px;
+        height: 700px;
+        width: 1150px;
+        padding-top: 60px;
 
 }
 
@@ -188,20 +187,23 @@ h2 {
       -webkit-margin-after: 0.83em;
       -webkit-margin-start: 0px;
       -webkit-margin-end: 0px;
+      text-align: center;
+      align-items: flex-start;
 }
 
 #locations .flex-conteiner {
-      width: 1000px;
+      width: 1200px;
       margin: auto;
 }
 
 .flex-conteiner.locations {
-     padding-top: 10px;
+     padding-top: 5px;
 }
 
 .flex-conteiner {
      display: flex;
      justify-content: center;
+     align-items: center;
      flex-wrap: wrap;
 }
 
@@ -211,8 +213,10 @@ h2 {
      display: flex;
      flex-direction: column;
      justify-content: center;
+     width: 300px;
+     height: 300px;
      padding: 10px;
-     margin: 10px 20px;
+     margin: 5px 20px;
 }
 
 h3 {
@@ -222,6 +226,7 @@ h3 {
      -webkit-margin-after: 1em;
      -webkit-margin-start: 0px;
      -webkit-margin-end: 0px;
+     text-align: center;
 }
 
 p {
@@ -230,4 +235,32 @@ p {
      -webkit-margin-after: 1em;
      -webkit-margin-start: 0px;
      -webkit-margin-end: 0px;
+     text-align: center;
+}
+         /* Contact Section */
+
+#contact {
+     height: 200px;
+}
+div {
+     display: block;
+}
+
+h2 {
+    display: block;
+    font-weight: bold;
+    text-align: center;
+}
+
+h5 {
+    display: block;
+    font-weight: bold;
+    text-align: center;
+}
+
+        /* Footer Section */
+
+footer {
+    text-align: left;
+    padding-left: 20px;
 }
